# spl-simplified-demo

./: .gitignore  Anchor.toml  README.md
programs/using_spl_simplified/: Cargo.toml
programs/using_spl_simplified/src/: lib.rs
tests/: using_spl_simplified.ts
